Add paragraphs and format code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <title>Lyrics</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,700|Raleway&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="lyrics">
         <h1 class="title">Knockin'on Heaven's Door</h1>
         <p class="author">by Guns N' Roses</p>
         <p>
-                        Mama, take this badge from me<br/>
-                        I can't use it anymore<br/>
-                        It's gettin' dark, too dark to see<br/>
-                        Feels like I'm knockin' on heaven's door
+            Mama, take this badge from me<br />
+            I can't use it anymore<br />
+            It's gettin' dark, too dark to see<br />
+            Feels like I'm knockin' on heaven's door
+        </p>
+        <p>
+            Knock-knock-knockin' on heaven's door, hey, hey, hey hey yeah<br />
+            Knock-knock-knockin' on heaven's door, ooh<br />
+            Knock-knock-knockin' on heaven's door, ooh yeah<br />
+            Knock-knock-knockin' on heaven's door, ayy hey yeah<br />
+            Oh, yeah, oh yeah, aw
+        </p>
+        <p>
+            Mama, put my guns in the ground (Ooh)<br />
+            I can't shoot them anymore (Ooh)<br />
+            That cold black cloud is comin' down (Ooh)<br />
+            Feels like I'm knockin' on heaven's door (Ooh)
+        </p>
+        <p>
+            Knock-knock-knockin' on heaven's door, hey, hey, hey hey yeah<br />
+            Knock-knock-knockin' on heaven's door<br />
+            Knock-knock-knockin' on heaven's door, ooh yeah<br />
+            Knock-knock-knockin' on heaven's door, ayy hey yeah<br />
+            Ooh
         </p>
     </div>
 </body>
+
 </html>
