--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Lyrics</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.prefixed.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,700|Raleway&display=swap" rel="stylesheet">
 </head>
 
